[package]
name = "protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[dependencies]
checked_decimal_macro = "0.1.4"
vec_macro = { path = "../vec_macro"}
anchor-lang = { version = "0.26.0", optional = true }
cfg-if = "1.0.0"

[features]
default = ["wasm"]
anchor = ["dep:anchor-lang"]
wasm = ["dep:wasm-bindgen"]

# UNUSED
# no-entrypoint = []
# no-idl = []
# no-log-ix-name = []
# cpi = ["no-entrypoint"]
# default = []


